
10 August 2004 Mariette
   merge major changes from branch tmp-my-2
- use a compact container to store alpha_status of facets and edges
- alpha_status of vertices are stored in vertices
- do not build alpha_edge_map and edge_alpha_map in REGULARIZED mode
  edges are then classify on the fly
- suppress SUPER_REGULAR type. For any $k$ :
  in GENERAL mode,  a boundary $k$ face is said to be REGULAR
  when belonging to a  $k+1$ of the Alpha complex
  in REGULAR mode. a boundary $k$ face is said to be REGULAR
  when belonging to a cell of the Alpha complex
- introduce the notion of Gabriel vertex or not Gabriel vertex
  for regular triangulation and add the  alpha_min_vertex_map;
- suppress building of alpha_mid_facet_map, alpha_mid_edge_map
  and alpha_mid_vertex_map.
  This saves time when building at the price of slightly more costly
  enumeration of aplha_shapes faces.
  add the _alpha_solid member type to recover the efficiency of
  find_optimal_alpha
- add member functions get_alpha_shapes_[cells, facets, edges vertices]
  to access to the faces of the alpha shapes



9 August 2004 Mariette
- fixed a bug in make_alpha_shape() coming from clear()
  which was abusively ressetting default values for _mode and _alpha

5 July 2004 Andreas Fabri
- Bug fix in std::ostream& operator<<(std::ostream& os,  const Alpha_shape_3<Dt>& A)

24 June 2004 Sylvain Pion
- Various fixes required by g++ 3.4.

22 May 2004 Sylvain Pion
- SunPRO workarounds.

14 May 2004 Sylvain Pion
- Fix warning.

08 May 2004 Sylvain Pion
- Use CGAL_USE_GEOMVIEW

07 May 2004 Andreas Fabri
- Prefixed Alpha_shape_status with CGAL::  (to get rid of error msg of SunPro CC)
- Replaced std::make_pair with Alpha_{cell,vertex}_map::value_type (to get rid of error msg of SunProCC)

05 May 2004 Andreas Fabri
- Added missing std:: to find in Alpha_shape_3.h

29 April 2004 Mariette Yvinec
- removed an old test file which I had forgotten to remove from cvs

28 April 2004 Mariette Yvinec